--- a/webgateway/CSP-apache.conf
+++ b/webgateway/CSP-apache.conf
@@ -24,8 +24,8 @@ CSPConfigPath "${ISC_PACKAGE_INSTALLDIR}/bin/"
 LoadModule ssl_module /usr/lib/apache2/modules/mod_ssl.so
 <VirtualHost *:443>
     SSLEngine on
-    SSLCertificateFile "/external/sslwebcert.crt"
-    SSLCertificateKeyFile "/external/sslwebkey.key"
+    SSLCertificateFile "/external/cert/sslwebcert.crt"
+    SSLCertificateKeyFile "/external/cert/sslwebkey.key"
 </VirtualHost>
 
 # Redirect Help links
