--- a/webgateway/CSP.ini
+++ b/webgateway/CSP.ini
@@ -1,3 +1,8 @@
+# defautl csp.ini for connecting only one iris instance
+# Ip_Address = iris-a
+# TCP_Port = 1972
+# Password is SYS
+
 [SYSTEM]
 IRISCONNECT_LIBRARY_PATH=/opt/webgateway/bin
 System_Manager=*.*.*.*
